test/good/generics/basic03.px

func f<A, B>(x: A): Void def
    print x

f(true)
f(false)
f(1)
