test/bad/tuples/cmp03.px

c: Char?
(true, c) > (false, c)
